--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,24 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
+
+    /**
+     * Define you Project Name here
+     */
+    def appName = 'Android MVVM Base'
+
+    /**
+     * For Internal user only
+     */
+    def APP_NAME = '\"' + (System.getenv("APP_NAME") ?: appName) + '\"'
+
 
     defaultConfig {
         applicationId "com.spinplanet.mvvmbase"
@@ -14,13 +27,23 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        buildConfigField "String", "APP_NAME", APP_NAME
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    kapt {
+        generateStubs = true
+    }
     buildTypes {
+        debug {
+            minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,16 +54,137 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    androidExtensions {
+        experimental = true
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
+    productFlavors {
+        dev {
+            buildConfigField 'String', 'BASE_URL', '"YOUR DEV URL/"'
+            buildConfigField 'boolean', 'WATER_MARK', 'true'
+        }
+        prod {
+            buildConfigField 'String', 'BASE_URL', '"YOUR PROD URL"'
+            buildConfigField 'boolean', 'WATER_MARK', 'false'
+        }
+
+        applicationVariants.all { variant ->
+            variant.outputs.all { output ->
+                outputFileName = ("${appName}_${variant.productFlavors[0].name}_${buildType.name}_v" +
+                        "${defaultConfig.versionCode}").toLowerCase().replace(" ", "_") + ".apk"
+            }
+        }
+
+    }
 }
+
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    def androidxActivity = '1.1.0'
+    def androidxFragment = '1.2.2'
+    def androidxLifecycle = '2.2.0'
+    def arch_components = '2.2.0'
+    def nav_components = '2.2.1'
+    def roomVersion = '2.2.4'
+    def multiDexVersion = '2.0.1'
+    def retrofitVersion = '2.7.0'
+    def fragmentVersion = '1.2.2'
+    def playServices = '17.0.0'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //Google Play Services
+    implementation "com.google.android.gms:play-services-maps:$playServices"
+    implementation "com.google.android.gms:play-services-places:$playServices"
+    implementation "com.google.android.gms:play-services-location:$playServices"
+    implementation "com.google.android.gms:play-services-auth:$playServices"
+
+    //Facebook Login
+    implementation 'com.facebook.android:facebook-login:5.8.0'
+
+    implementation "androidx.activity:activity-ktx:$androidxActivity"
+    implementation "androidx.fragment:fragment-ktx:$androidxFragment"
+    debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$androidxLifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidxLifecycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidxLifecycle"
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+
+    // CoRoutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
+    implementation "androidx.multidex:multidex:$multiDexVersion"
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation "org.permissionsdispatcher:permissionsdispatcher:4.6.0"
+    kapt "org.permissionsdispatcher:permissionsdispatcher-processor:4.6.0"
+
+    //For OnBoarding Screens
+    implementation 'com.stepstone.stepper:material-stepper:4.3.1'
+
+    // Test Tools Help
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.14.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.14.0'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //Koin - Dependency Injection
+    implementation 'org.koin:koin-androidx-scope:2.0.1'
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+
+    //Navigation
+    implementation "androidx.navigation:navigation-runtime-ktx:$nav_components"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_components"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_components"
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-common-java8:$arch_components"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$arch_components"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_components"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$arch_components"
+
+    // Room Dao
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
+    //Facebook Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    // Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+
+    //For Image Loading
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Timber for Debugging / Logging
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //AndroidJUnitRunner, JUnit Rules and Assertions
+    testImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0') {
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
 }
+apply plugin: 'com.google.gms.google-services'
