--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -32,18 +31,13 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    kapt {
-        generateStubs = true
-    }
     buildTypes {
         debug {
             minifyEnabled false
-            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
             minifyEnabled false
-            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -63,14 +57,19 @@ android {
         enabled = true
     }
 
+    flavorDimensions "dev", "prod"
+
     productFlavors {
         dev {
             buildConfigField 'String', 'BASE_URL', '"YOUR DEV URL/"'
             buildConfigField 'boolean', 'WATER_MARK', 'true'
+            dimension "dev"
         }
         prod {
             buildConfigField 'String', 'BASE_URL', '"YOUR PROD URL"'
             buildConfigField 'boolean', 'WATER_MARK', 'false'
+            dimension "prod"
+
         }
 
         applicationVariants.all { variant ->
@@ -81,6 +80,10 @@ android {
         }
 
     }
+}
+
+kapt {
+    generateStubs = true
 }
 
 
@@ -98,7 +101,7 @@ dependencies {
     def playServices = '17.0.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.1.60"
 
     //Google Play Services
     implementation "com.google.android.gms:play-services-maps:$playServices"
@@ -106,8 +109,12 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$playServices"
     implementation "com.google.android.gms:play-services-auth:$playServices"
 
+    //UI
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "com.google.android.material:material:1.3.0"
+
     //Facebook Login
-    implementation 'com.facebook.android:facebook-login:5.8.0'
+    implementation 'com.facebook.android:facebook-login:7.1.0'
 
     implementation "androidx.activity:activity-ktx:$androidxActivity"
     implementation "androidx.fragment:fragment-ktx:$androidxFragment"
@@ -116,8 +123,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidxLifecycle"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidxLifecycle"
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     // CoRoutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
@@ -141,10 +148,6 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
-    //Koin - Dependency Injection
-    implementation 'org.koin:koin-androidx-scope:2.0.1'
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
-
     //Navigation
     implementation "androidx.navigation:navigation-runtime-ktx:$nav_components"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_components"
@@ -159,6 +162,12 @@ dependencies {
     // Room Dao
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
+
+    // dagger
+    implementation 'com.google.dagger:dagger:2.27'
+    implementation 'com.google.dagger:dagger-android-support:2.16' // if you use the support libraries
+    kapt 'com.google.dagger:dagger-compiler:2.16'
+    kapt 'com.google.dagger:dagger-android-processor:2.16'
 
     //Facebook Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
@@ -187,4 +196,4 @@ dependencies {
         exclude module: 'recyclerview-v7'
     }
 }
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
